# unidad-6-programacion-concurrente-AlejandroGH97

./: CMakeLists.txt  informe.tex  main.cpp  matriz_reg.cpp  matriz_reg.h  matriz_thread.cpp  matriz_thread.h
